--- a/Second Year/Physics2/Physics2Report.tex
+++ b/Second Year/Physics2/Physics2Report.tex
@@ -230,4 +230,51 @@ Use the thermocouple and the calibration graph to estimate:
     \item c. The temperature of water from the tap in the lab $\rightarrow 17.5$ °C $(17.5 * 0.04) - 0.2114 = 0,4886 $ 
 \end{itemize}
 
+\section{Exp 5 - RC Circuity}
+
+\subsection{Theory}
+
+It can be shown that the voltage and the current in the current in the circuit as follow:
+
+\[V_c(t) = V_0 (1 - e^{-\frac{t}{\tau}})\]
+\[I(t) = \frac{V_0}{R}e^{-\frac{t}{\tau}}\]
+where $\tau = CR$.
+In this experiment we are going to show these relationships.
+
+
+\subsubsection{Aim(s)}
+
+To build and test an RC circuit under (a) charge and (b) discharge conditions
+
+\subsection{Experiment}
+\begin{figure}[H]
+\centering
+\begin{tabular}{|c|c|c|c|}
+    \hline
+    Time (s) & Voltage (V) & Time (s) & Voltage (s)\\
+    \hline
+    0 & 0 & 0 & 0\\
+    5 & 0.20 & 0 & 0\\
+    10 & 0.45 & 0 & 0\\
+    15 & 0.69 & 0 & 0\\
+    20 & 1.1 & 0 & 0\\
+    \vdots & \vdots & \vdots & \vdots\\
+    60 & 2.65 & 60 & 0\\
+    120 & 4.20 & 120 & 0\\
+    180 & 5.45 & 180 & 0\\
+    240 & 6.40 & 240 & 0\\
+    300 & 7.12 & 300 & 0\\
+    360 & 7.70 & 360 & 0\\
+    420 & 8.14 & 420 & 0\\
+    480 & 8.50 & 480 & 0\\
+    540 & 8.83 & 540 & 0\\
+    600 & 9.17 & 600 & 0\\
+    \vdots & \vdots & \vdots & \vdots\\
+    1380 & 9.99 & 1380 & 0\\
+    \hline   
+\end{tabular}
+\caption{Table of measurements while charging the circuits}
+\end{figure}
+
+
 \end{document}
