--- a/setup.sty
+++ b/setup.sty
@@ -18,6 +18,8 @@
 \usepackage{forest}
 \usepackage{amsthm}
 \usepackage{amssymb}
+\usepackage{fontawesome} 
+\usepackage{varwidth}
 \usepackage{pgfplots}
 \usepackage{lipsum}
 \usepackage{mdframed} 
@@ -109,6 +111,8 @@
 
 \usepackage{xcolor}
 \usepackage[most]{tcolorbox}
+
+
 % Define a custom tcolorbox environment for examples
 \newtcolorbox{examplebox}[2][]{
   colback=blue!5!white,
